# gofilepyfs

./: LICENSE  README.md  pyproject.toml
gofilepyfs/: __init__.py  decorators.py  exceptions.py
